package util.enums;

public enum Genero {
    MASCULINO,
    FEMININO;
}
