package util.enums;

public enum TipoEleicao {
    ESTADUAL,
    FEDERAL;
}
